[package]
name = "az-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
azure_core = { version = "0.20", default-features = false, features = ["enable_reqwest_rustls"] }
azure_identity = { version = "0.20", default-features = false, features = ["enable_reqwest_rustls"] }
azure_mgmt_compute = { version = "0.20", default-features = false, features = ["default_tag", "enable_reqwest_rustls"] }
futures = "0.3"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
anyhow = "1.0"
serde_json = "1.0.120"
